src/styles/stylesheet.css
html {
  font: 107.5%/1.5 sans-serif;
}

@media print {
  footer nav {
    /* Hide "first prev index next latest" for print. */
    display: none;
  }
}

@media screen {
  html {
    margin: auto;
    max-width: 45em;
    padding-inline: 3%;

    padding-top: 1rem;
    padding-bottom: 4rem;
  }

  article {
    margin: auto;
    max-width: 36em;
  }
}

footer {
  margin-top: 2rem;
}

nav.sequenceNav ol {
  padding: 0;
  list-style: none;
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  gap: 2ch;
}

.summary-directory p {
  margin-block: 0.5rem 1.5rem;
}

img {
  width: 100%;
  height: auto;
}

@media (prefers-color-scheme: dark) {
  html {
    color: #E9E9E9;
    background-color: #191919;
  }

  a {
    color: #91b6ff;
  }

  a:visited {
    color: #f091ff;
  }

  a:hover {
    color: #ff9191;
  }
}

